# video-stitch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
examples/basic-stitch/: README.md
examples/crossfade-demo/: README.md
examples/full-featured/: README.md
references/: ffmpeg-filters.md  troubleshooting.md
scripts/: check-deps.sh  install.sh
templates/: recipe-full.json  recipe-simple.json
tests/: conftest.py  test_cli.py  test_normalizer.py  test_overlay.py  test_pipeline.py  test_probe.py  test_recipe.py  test_stitcher.py  test_transitions.py  test_trimmer.py  test_utils.py
video_stitch/: __init__.py  __main__.py  cli.py  constants.py  normalizer.py  overlay.py  pipeline.py  probe.py  recipe.py  stitcher.py  transitions.py  trimmer.py  utils.py
