[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-stitch"
version = "1.0.0"
description = "Stitch videos together with transitions, text, and effects — a lightweight ffmpeg wrapper."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shuangyan & Luoxian", email = "hermes@shuangyan.dev"}
]
keywords = ["video", "ffmpeg", "stitching", "concatenation", "transitions", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
requires-python = ">=3.9"
dependencies = []  # Zero Python dependencies — only ffmpeg required

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
video-stitch = "video_stitch.cli:main"
video-probe = "video_stitch.cli:probe_main"

[project.urls]
Homepage = "https://github.com/shuangyan/video-stitch"
Repository = "https://github.com/shuangyan/video-stitch"
Issues = "https://github.com/shuangyan/video-stitch/issues"

[tool.setuptools]
packages = ["video_stitch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
